--- a/product-maintain/bin/src/main/resources/application.properties
+++ b/product-maintain/bin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/productmaintenance
 
 spring.datasource.username=root
-spring.datasource.password=Cogaim55
+spring.datasource.password=nyal512
 spring.datasource.initialization-mode=always
